# specs/002-domain-model/contracts/openapi.yaml
@@ -135,6 +135,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ChildrenPage'
+        '400':
+          $ref: '#/components/responses/ApiError'
+        '404':
+          $ref: '#/components/responses/ApiError'
 
   /projects/{projectId}/elements/{elementId}:
     get:
